Feature/15 hexxen dice (#16)
* Added the resource system.

* Some cleanups.

- Added first REST test.
- Removed duplicate classes from the module system by excluding dependencies
- Disabled the discord connect for profiles dev and test.

* Added discord connection checks.

* Streamlined the discord checks. Don't need to hammer on discord for checking it.

* WIP: savepoint before removing modules.

* Added the mongodb tests and moved the mongodb into the core module. To get mongodb running, the java modules needed to be removed (quarkus packages the classes so that the module system does not work with quarkus).

* Moved the mongodb quarkus resource manager into a maven subproject. Will be used on several modules (at least rpg-core and rpg-bot).

* Added javadoc and openapi descriptions (where suitable) to all files.

* WIP: Added some logging information and the card basics.

* Introduced the DieResult interface for abstracting the die roll.

* Added the HeXXen dice. Tests will follow ...

* HeXXen, TORG, Fate and "normal" die work as expected.

* Added the snowflake code of downgoon (https://github.com/downgoon/snowflake).

Signed-off-by: klenkes74 <rlichti@kaiserpfalz-edv.de>

* Remove logging when the discord message does not start with "/".

Signed-off-by: klenkes74 <rlichti@kaiserpfalz-edv.de>

* Added markdown to the system for displaying formatted data.

Signed-off-by: klenkes74 <rlichti@kaiserpfalz-edv.de>

* Added the tomb-ui with patternfly4.
It's not working in the moment. My patternfly4+react+redux+storybook+typescript fu is very weak, yet.

Signed-off-by: klenkes74 <rlichti@kaiserpfalz-edv.de>